trying to add js particles

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <!-- {/* end of mobile nav */} -->
     <main>
       <section class="hero container">
+        <!-- <div id="particle-js"></div> -->
         <img class="hero__img" src="img.jpg" alt="Profile picture" />
         <h2 class="hero__subtitle">Hello, I'm Elijah! 👋</h2>
         <h1 class="hero__title">
@@ -466,5 +467,7 @@
       <h3 class="footer__title">Elijah Luis</h3>
     </footer>
     <script type="module" src="./src/main.js"></script>
+    <!-- <script src="./src/particle.min.js"></script>
+    <script src="./src/app.js"></script> -->
   </body>
 </html>
