--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Elijah Luis - Portfolio</title>
   </head>
   <body>
+    <div id="preloader"></div>
     <header class="header container">
       <nav>
         <ul class="header__menu">
@@ -19,7 +20,7 @@
             <a class="header__link" href="#about"> About </a>
           </li>
           <li>
-            <a class="header__link" href="#featured"> Work </a>
+            <a class="header__link" href="#featured"> Featured </a>
           </li>
           <li>
             <a class="header__link" href="#contact"> Contact </a>
@@ -39,7 +40,13 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="#"> Download CV </a>
+            <a
+              class="header__resume btn"
+              href="https://drive.google.com/file/d/1vgUlTP6-JQA4O8GNgI3P33WFyyxWPNd3/view?usp=sharing"
+              target="_blank"
+            >
+              View CV
+            </a>
           </li>
         </ul>
         <button class="header__bars">
@@ -68,7 +75,13 @@
             <a href="#featured" class="mobile-nav__link"> Work </a>
           </li>
           <li>
-            <a href="#contact" class="mobile-nav__link"> Contact </a>
+            <a
+              href="mailto:arocena.elijahluis@gmail.com"
+              target="_blank"
+              class="mobile-nav__link"
+            >
+              Contact
+            </a>
           </li>
           <li class="mobile-nav__link-line"></li>
           <li>
@@ -85,15 +98,23 @@
             </button>
           </li>
           <li>
-            <a href="" class="mobile-nav__btn btn"> Resume </a>
+            <a
+              href="https://drive.google.com/file/d/1vgUlTP6-JQA4O8GNgI3P33WFyyxWPNd3/view?usp=sharing"
+              class="mobile-nav__btn btn"
+              target="_blank"
+            >
+              Resume
+            </a>
           </li>
         </ul>
       </nav>
     </div>
     <!-- {/* end of mobile nav */} -->
     <main>
-      <section class="hero container">
-        <!-- <div id="particle-js"></div> -->
+      <section class="hero container backdrop">
+        <!-- particles.js container -->
+        <div id="particles-js"></div>
+
         <img class="hero__img" src="img.jpg" alt="Profile picture" />
         <h2 class="hero__subtitle">Hello, I'm Elijah! 👋</h2>
         <h1 class="hero__title">
@@ -106,7 +127,7 @@
           visually attractive, pixel-perfect interactive websites and
           applications.
         </p>
-        <a class="hero__btn btn" href="#"> Contact </a>
+        <a class="hero__btn btn" href="#projects"> View Projects </a>
       </section>
       <section id="about" class="about container section">
         <div class="about__content">
@@ -280,7 +301,7 @@
         </div>
       </section>
       <section class="work container section">
-        <h2 class="work__title">Projects</h2>
+        <h2 id="projects" class="work__title">Projects</h2>
         <p class="work__description">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quae
           nostrum, nulla possimus ducimus suscipit laudantium numquam aspernatur
@@ -312,7 +333,13 @@
               aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
               itaque, ullam voluptas tempore quis corrupti.
             </p>
-            <a class="btn work__project-btn" href="#"> Website </a>
+            <a
+              class="btn work__project-btn"
+              href="https://higround.co/"
+              target="_blank"
+            >
+              Website
+            </a>
           </div>
           <!-- {/* Project 2 */} -->
           <h3 class="work__project-title">Sentinels</h3>
@@ -338,7 +365,13 @@
               aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
               itaque, ullam voluptas tempore quis corrupti.
             </p>
-            <a class="btn work__project-btn" href="#"> Website </a>
+            <a
+              class="btn work__project-btn"
+              href="https://www.sentinels.gg/"
+              target="_blank"
+            >
+              Website
+            </a>
           </div>
           <!-- {/* Project 3 */} -->
           <h3 class="work__project-title">Team Liquid</h3>
@@ -364,7 +397,13 @@
               aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
               itaque, ullam voluptas tempore quis corrupti.
             </p>
-            <a class="btn work__project-btn" href="#"> Website </a>
+            <a
+              class="btn work__project-btn"
+              href="https://www.teamliquid.com/"
+              target="_blank"
+            >
+              Website
+            </a>
           </div>
           <!-- {/* Project 4 */} -->
           <h3 class="work__project-title">Akko</h3>
@@ -390,7 +429,13 @@
               aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
               itaque, ullam voluptas tempore quis corrupti.
             </p>
-            <a class="btn work__project-btn" href="#"> Website </a>
+            <a
+              class="btn work__project-btn"
+              href="https://en.akkogear.com/"
+              target="_blank"
+            >
+              Website
+            </a>
           </div>
           <!-- {/* Project 5 */} -->
           <h3 class="work__project-title">Artisan</h3>
@@ -416,7 +461,13 @@
               aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
               itaque, ullam voluptas tempore quis corrupti.
             </p>
-            <a class="btn work__project-btn" href="#"> Website </a>
+            <a
+              class="btn work__project-btn"
+              href="https://www.artisan-jp.com/nj_index_eng.html/"
+              target="_blank"
+            >
+              Website
+            </a>
           </div>
           <!-- {/* Project 6 */} -->
           <h3 class="work__project-title">Old Portfolio</h3>
@@ -467,7 +518,15 @@
       <h3 class="footer__title">Elijah Luis</h3>
     </footer>
     <script type="module" src="./src/main.js"></script>
-    <!-- <script src="./src/particle.min.js"></script>
-    <script src="./src/app.js"></script> -->
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+      var loader = document.getElementById("preloader");
+      window.addEventListener("load", function () {
+        loader.style.display = "none";
+      });
+    </script>
+    <!-- scripts -->
+    <script src="./particle.js"></script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
