fixed all buttons getting overlapped by particles

--- a/index.html
+++ b/index.html
@@ -111,10 +111,9 @@
     </div>
     <!-- {/* end of mobile nav */} -->
     <main>
-      <section class="hero container backdrop">
+      <section class="hero container">
         <!-- particles.js container -->
         <div id="particles-js"></div>
-
         <img class="hero__img" src="img.jpg" alt="Profile picture" />
         <h2 class="hero__subtitle">Hello, I'm Elijah! 👋</h2>
         <h1 class="hero__title">
