updated descriptions, removed landing parallax

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
     </div>
     <!-- {/* end of mobile nav */} -->
     <main>
-      <section class="parallax">
+      <!-- <section class="parallax">
         <img src="landing.jpg" id="LandingPic" />
         <h2 id="texto">Four</h2>
-      </section>
+      </section> -->
       <section class="hero container">
         <!-- particles.js container -->
         <div id="particles-js"></div>
@@ -307,10 +307,11 @@
       <section class="work container section">
         <h2 id="projects" class="work__title">Projects</h2>
         <p class="work__description">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quae
-          nostrum, nulla possimus ducimus suscipit laudantium numquam aspernatur
-          culpa dicta unde, minima neque ea id molestiae eveniet accusantium
-          debitis quisquam.
+          Explore a variety of my captivating web projects. Find the perfect
+          keyboard on our e-commerce website. Immerse yourself in the thrilling
+          world of e-sports on our dedicated platform. Discover my past projects
+          and creative accomplishments on my personal portfolio. Indulge your
+          interests and aspirations online.
         </p>
         <div class="work__container">
           <!-- {/* Project 1 */} -->
@@ -326,16 +327,17 @@
           <div class="work__project work__content1">
             <h3 class="work__project-subtitle">HIGROUND.</h3>
             <p class="work__project-description1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              eius amet iste voluptate? Voluptatibus error repudiandae culpa
-              nihil aspernatur recusandae cumque nulla similique porro rem?
-              Nihil delectus rerum nostrum provident?
+              Enhance your typing experience with my premier e-commerce site.
+              Explore a wide range of keyboards, keycaps, and switches for
+              ultimate customization. Find your perfect match and unlock the
+              full potential of your keyboard setup.
             </p>
             <p class="work__project-description2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates expedita hic aperiam cupiditate officiis assumenda
-              aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
-              itaque, ullam voluptas tempore quis corrupti.
+              Whether you're a casual typist or a seasoned pro, discover the
+              perfect combination to transform your typing experience into a
+              seamless and enjoyable journey. Elevate your productivity and
+              unlock the true potential of your keyboard setup with our
+              exceptional selection.
             </p>
             <a
               class="btn work__project-btn"
@@ -358,16 +360,17 @@
           <div class="work__project work__content2">
             <h3 class="work__project-subtitle">Sentinels</h3>
             <p class="work__project-description1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              eius amet iste voluptate? Voluptatibus error repudiandae culpa
-              nihil aspernatur recusandae cumque nulla similique porro rem?
-              Nihil delectus rerum nostrum provident?
+              Welcome to Sentinels, your ultimate destination for everything
+              e-sports. Immerse yourself in a world of adrenaline-pumping
+              competition and thrilling gaming moments. Stay up-to-date with the
+              latest e-sports news, catch live tournament action, and explore
+              in-depth analyses of your favorite games.
             </p>
             <p class="work__project-description2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates expedita hic aperiam cupiditate officiis assumenda
-              aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
-              itaque, ullam voluptas tempore quis corrupti.
+              Connect with a vibrant community of passionate gamers, share your
+              insights, and join the conversation. Let Sentinels be your guide
+              into the electrifying realm of e-sports, where champions are made
+              and legends are born.
             </p>
             <a
               class="btn work__project-btn"
@@ -390,16 +393,18 @@
           <div class="work__project work__content3">
             <h3 class="work__project-subtitle">Team Liquid</h3>
             <p class="work__project-description1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              eius amet iste voluptate? Voluptatibus error repudiandae culpa
-              nihil aspernatur recusandae cumque nulla similique porro rem?
-              Nihil delectus rerum nostrum provident?
+              Introducing Team Liquid, your go-to platform for e-sports
+              community and e-commerce. Immerse yourself in a thriving community
+              of passionate gamers from across the globe. Stay informed with
+              up-to-the-minute news, tournament schedules, and comprehensive
+              game analysis.
             </p>
             <p class="work__project-description2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates expedita hic aperiam cupiditate officiis assumenda
-              aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
-              itaque, ullam voluptas tempore quis corrupti.
+              Explore our premium e-commerce store, featuring a diverse range of
+              high-quality merchandise representing Team Liquid and your beloved
+              players. Join the team, show your unwavering support, and be an
+              integral part of the exhilarating world of competitive gaming with
+              Team Liquid.
             </p>
             <a
               class="btn work__project-btn"
@@ -422,16 +427,18 @@
           <div class="work__project work__content4">
             <h3 class="work__project-subtitle">Akko</h3>
             <p class="work__project-description1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              eius amet iste voluptate? Voluptatibus error repudiandae culpa
-              nihil aspernatur recusandae cumque nulla similique porro rem?
-              Nihil delectus rerum nostrum provident?
+              Experience the realm of keyboards and unleash your creativity with
+              Akko. Dive into our website dedicated to keyboard enthusiasts and
+              discover a world of limitless customization. Immerse yourself in a
+              curated selection of high-quality keyboards and accessories
+              designed to elevate your typing experience.
             </p>
             <p class="work__project-description2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates expedita hic aperiam cupiditate officiis assumenda
-              aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
-              itaque, ullam voluptas tempore quis corrupti.
+              From customizable keycaps to innovative switches, Akko provides
+              the tools to express your unique style and create a keyboard that
+              is truly your own. Explore the possibilities and redefine your
+              relationship with your keyboard through Akko's unparalleled range
+              of customization options.
             </p>
             <a
               class="btn work__project-btn"
@@ -454,16 +461,17 @@
           <div class="work__project work__content5">
             <h3 class="work__project-subtitle">Artisan</h3>
             <p class="work__project-description1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              eius amet iste voluptate? Voluptatibus error repudiandae culpa
-              nihil aspernatur recusandae cumque nulla similique porro rem?
-              Nihil delectus rerum nostrum provident?
+              Welcome to Artisan, where precision and style meet in the world of
+              mousepads and mice. Discover our website dedicated to providing
+              you with the perfect combination of functionality and aesthetics.
             </p>
             <p class="work__project-description2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates expedita hic aperiam cupiditate officiis assumenda
-              aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
-              itaque, ullam voluptas tempore quis corrupti.
+              Explore a carefully curated selection of high-quality mousepads
+              designed to optimize your gaming or work experience. Pair your
+              mousepad with our premium range of mice, meticulously crafted to
+              deliver exceptional performance and comfort. Elevate your gaming
+              or productivity to new heights with Artisan, where every click and
+              glide is a masterpiece.
             </p>
             <a
               class="btn work__project-btn"
@@ -486,16 +494,17 @@
           <div class="work__project work__content6">
             <h3 class="work__project-subtitle">Old Portfolio</h3>
             <p class="work__project-description1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              eius amet iste voluptate? Voluptatibus error repudiandae culpa
-              nihil aspernatur recusandae cumque nulla similique porro rem?
-              Nihil delectus rerum nostrum provident?
+              My old portfolio website, a journey through my creative endeavors
+              and professional accomplishments. Explore a collection of my past
+              projects that showcase my skills, expertise, and passion.
             </p>
             <p class="work__project-description2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates expedita hic aperiam cupiditate officiis assumenda
-              aspernatur porro? Veniam quas officia odio eaque assumenda vitae,
-              itaque, ullam voluptas tempore quis corrupti.
+              From web design to graphic art, delve into a showcase of my
+              innovative designs and problem-solving approach. Witness the
+              results of my dedication and commitment to delivering exceptional
+              outcomes. Step into my world and gain insight into my abilities
+              and experience that make me the ideal candidate for your next
+              project.
             </p>
             <a class="btn work__project-btn" href="#"> Website </a>
           </div>
@@ -504,10 +513,11 @@
       <section id="contact" class="contact container section">
         <h2 class="contact__title">Reach Out</h2>
         <p class="contact__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Exercitationem incidunt, ea ullam soluta, fuga animi necessitatibus a
-          aliquam maxime aliquid ratione nesciunt quidem dolores pariatur
-          doloribus suscipit quisquam accusamus cumque?
+          For inquiries or collaboration opportunities, please feel free to
+          reach out to me. I'm excited to connect with like-minded individuals
+          and discuss potential projects. You can contact me through the
+          provided email address or by clicking the contact link on my website.
+          I look forward to hearing from you!
         </p>
         <a
           href="mailto:arocena.elijahluis@gmail.com"
