--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="preloader"></div>
     <header class="header container">
-      <a href="#" class="header__logo container">ELIJAH.</a>
+      <a href="#" class="header__logo">ELIJAH.</a>
       <nav>
         <ul class="header__menu">
           <li>
